--- a/gallery.html
+++ b/gallery.html
@@ -1,30 +1,150 @@
+<!-- Design by foolishdeveloper.com -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="gallery.css">
-    <link rel="" href="index.html">
-    <title>Gallery</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>gallery</title>
+
+  <style>
+ body {
+  margin: 10%;
+   margin-left:20%;
+   background-color: darkgreen;
+}
+
+#slider {
+  position: relative;
+  width: 900px;
+  height: 400px;
+ 
+  overflow: hidden;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+}
+#slider ul {
+  position: relative;
+  list-style: none;
+  height: 100%;
+  width: 10000%;
+  padding: 0;
+  margin: 0;
+  transition: all 750ms ease;
+  left: 0;
+}
+#slider ul li {
+  position: relative;
+  height: 100%;
+ 
+  float: left;
+}
+#slider ul li img{
+  width: 900px;
+  height: 400px;
+}
+ 
+#slider #prev, #slider #next {
+  width: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 2rem;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 150ms ease;
+}
+#slider #prev:hover, #slider #next:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 0;
+  box-shadow: 2px 2px 2px;
+}
+#slider #prev {
+  left: 10px;
+}
+#slider #next {
+  right: 10px;
+}
+  </style>
 </head>
-<!-- Coding With Nick -->
-
 <body>
+  <div id="slider">
+    <ul id="slideWrap"> 
+      <li><img src="lake.jpg" alt=""></li>
+      <li><img src="marwadi1.jpg" alt=""></li>
+      <li><img src="marwadi7.jpg" alt=""></li>
+      <li><img src="road1.jpg" alt=""></li>
+      <li><img src="marwadi3.jpg" alt=""></li>
+      <li><img src="road2.jpg" alt=""></li>
+      <li><img src="marwadi2.jpg" alt=""></li>
+      <li><img src="marwadi1.jpg" alt=""></li>
+    </ul>
+    <a id="prev" href="#">&#8810;</a>
+    <a id="next" href="#">&#8811;</a>
+  </div>
 
- <a href="index.html" class="bbtn"><h1>Gallery</h1></a>
-    <!-- Header -->
-    <div class="gallery">
-        <div class="img-w1"><img src="marwadi1.jpg" alt="" /></div>
-        <div class="img-w2"><img src="marwadi2.jpg" alt="" /></div>
-        <div class="img-w3"><img src="marwadi6.jpg" alt="" /></div>
-        <div class="img-w4"><img src="road2.jpg" alt="" /></div>
-        <div class="img-w5"><img src="lake.jpg" alt="" /></div>
-        <div class="img-w7"><img src="road1.jpg" alt="" /></div>
-        <div class="img-w8"><img src="marwadi7.jpg" alt="" /></div>
-        <div class="img-w8"><img src="maradi6.jpg" alt="" /></div>
-    </div>
 
+  <script>
+    var responsiveSlider = function() {
+
+var slider = document.getElementById("slider");
+var sliderWidth = slider.offsetWidth;
+var slideList = document.getElementById("slideWrap");
+var count = 1;
+var items = slideList.querySelectorAll("li").length;
+var prev = document.getElementById("prev");
+var next = document.getElementById("next");
+
+window.addEventListener('resize', function() {
+  sliderWidth = slider.offsetWidth;
+});
+
+var prevSlide = function() {
+  if(count > 1) {
+    count = count - 2;
+    slideList.style.left = "-" + count * sliderWidth + "px";
+    count++;
+  }
+  else if(count = 1) {
+    count = items - 1;
+    slideList.style.left = "-" + count * sliderWidth + "px";
+    count++;
+  }
+};
+
+var nextSlide = function() {
+  if(count < items) {
+    slideList.style.left = "-" + count * sliderWidth + "px";
+    count++;
+  }
+  else if(count = items) {
+    slideList.style.left = "0px";
+    count = 1;
+  }
+};
+
+next.addEventListener("click", function() {
+  nextSlide();
+});
+
+prev.addEventListener("click", function() {
+  prevSlide();
+});
+
+setInterval(function() {
+  nextSlide()
+}, 5000);
+
+};
+
+window.onload = function() {
+responsiveSlider();  
+}
+
+
+  </script>
 </body>
 </html>
