--- a/gallery.html
+++ b/gallery.html
@@ -9,15 +9,15 @@
 
   <style>
  body {
-  margin: 10%;
-   margin-left:20%;
+  margin: 20%;
+   margin-left:0;
    background-color: darkgreen;
 }
 
 #slider {
   position: relative;
-  width: 700px;
-  height: 400px;
+  width: 710px;
+  height: 500px;
  
   overflow: hidden;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
@@ -39,8 +39,8 @@
   float: left;
 }
 #slider ul li img{
-  width: 700px;
-  height: 400px;
+  width: 710px;
+  height: 500px;
 }
  
 #slider #prev, #slider #next {
