--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
 #slider #prev:hover, #slider #next:hover {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0;
-  box-shadow: 2px 2px 2px;
+  box-shadow: 2px 2px 2px 2px black;
 }
 #slider #prev {
   left: 10px;
